--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,39 +14,39 @@
 </head>
 
 <body>
-
-    <h1 id="page-heading">
-        <i class="fas fa-address-book"></i>
-        Contact List
-    </h1>
     <div>
-        <ul>
-            <%for (let student of student_list){%>
-                <li>
-                    <p>
-                        <%= student.name%>
-                    </p>
-                    <p>
-                        <%= student.phone%>
-                    </p>
-                    <div class="delete-button">
-                        <!-- <a href="/delete-student/<%= student.age%>"> -->
-                        <a href="/delete-student/?id=<%= student._id%>">
-                            <i class="fas fa-window-close">
-
-                            </i>
-                        </a>
+    <section class="section-products">
+                    <div class="container">
+                        <div class="row justify-content-center text-center">
+                            <div class="col-md-8 col-lg-6">
+                                <div class="header">
+                                    <h2>Students List</h2>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <%for (let student of student_list){%>
+                            <!-- Single Product -->
+                            <div class="col-md-6 col-lg-4 col-xl-3">
+                                <div id="product-1" class="single-product">
+                                    <div class="part-1">
+                                        <ul>
+                                        <li><a href="/delete-student/?id=<%= student._id%>"><i class="fa-solid fa-trash-can"></i></a></li>
+                                        <li><a href="#"><i class="fa-solid fa-circle-info"></i></a></li>
+                                        </ul>
+                                    </div>
+                                    <div class="part-2">
+                                        <h2 class="product-title"><%= student.name%></h2>
+                                        <h4 class="product-title"><%= student.phone%></h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Single Product -->
+                 <%}%>
+                        </div>
                     </div>
-                </li>
-                <%}%>
-        </ul>
+                </section>
     </div>
-    <form action="create-student" method="post">
-        <input type="text" name="name" id="name">
-        <input type="text" name="phone" id="phone">
-        <button type="submit">Add Student</button>
-    </form>
-    <script type="text/javascript" src="/js/home.js"></script>
 </body>
 
 </html>
