--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -17,7 +17,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar  navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Student Placement Cell</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,14 +30,14 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Interviews</a>
+                    <a class="nav-link" href="/interviews">Interviews</a>
                 </li>
           
                 <li class="nav-item">
                 <a class="nav-link" href="/student-form">Add Student</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Profile</a>
+                    <a class="nav-link" href="/users/profile">Profile</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
