--- a/views/home.ejs
+++ b/views/home.ejs
@@ -32,7 +32,7 @@
                                     <div class="part-1">
                                         <ul>
                                         <li><a href="/delete-student/?id=<%= student._id%>"><i class="fa-solid fa-trash-can"></i></a></li>
-                                        <li><a href="#"><i class="fa-solid fa-circle-info"></i></a></li>
+                                        <li><a href="/studentinfo"><i class="fa-solid fa-circle-info"></i></a></li>
                                         </ul>
                                     </div>
                                     <div class="part-2">
