--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -30,19 +30,23 @@
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/interviews">Interviews</a>
+                    <a class="nav-link" href="/company/company-list">Companies</a>
                 </li>
           
                 <li class="nav-item">
                 <a class="nav-link" href="/student-form">Add Student</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/users/profile">Profile</a>
-                </li>
+                <!-- <li class="nav-item">
+                    <a class="nav-link" href="/company/create-company">Create Company</a>
+                </li> -->
             </ul>
             <form class="form-inline my-2 my-lg-0">
+                <% if(locals.user) {%>
+                    <a class="btn btn-secondary my-2 my-sm-0" href="/users/signout">Sign Out</a>
+                <%} else{%>
                 <a class="btn btn-success mr-sm-2" href="/users/signin">Sign In</a>
                 <a class="btn btn-secondary my-2 my-sm-0" href="/users/signup">Sign Up</a>
+                <%}%>
             </form>
         </div>
     </nav>
