--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -2,11 +2,11 @@
 <form action="/users/create-session" method="post">
     <div class="form-group">
         <label for="email">Email address</label>
-        <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+        <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp">
      </div>
     <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password">
+        <input type="password" name="password" class="form-control" id="password">
     </div>
   
     <button type="submit" class="btn btn-primary">Sign In</button>
