added download functionality,built all controllers and functionalities

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -34,11 +34,11 @@
                 </li>
           
                 <li class="nav-item">
-                <a class="nav-link" href="/student-form">Add Student</a>
+                <a class="nav-link" href="/student/student-form">Add Student</a>
                 </li>
-                <!-- <li class="nav-item">
-                    <a class="nav-link" href="/company/create-company">Create Company</a>
-                </li> -->
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/download-csv">Download Report</a>
+                </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <% if(locals.user) {%>
