--- a/views/create_student.ejs
+++ b/views/create_student.ejs
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-    <form action="create-student" method="post">
+    <form action="/student/create-student" method="post">
         <div class="row">
             <div class="col-md-6">
                 <div class="form-group">
