--- a/views/companies_list.ejs
+++ b/views/companies_list.ejs
@@ -15,38 +15,53 @@
 
 <body>
     <div class="create-company"><%- include('_create_company'); %></div>
-    <div>
-    <section class="section-company">
-                    <div class="container">
-                        <div class="row justify-content-center text-center">
-                            <div class="col-md-8 col-lg-6">
-                                <div class="header">
-                                    <h2>Companies</h2>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <%for (let company of company_list){%>
-                            <!-- Single company -->
-                            <div class="col-md-6 col-lg-4 col-xl-3">
-                                <div id="company-1" class="single-company">
-                                    <div class="part-1">
-                                        <ul>
-                                        <li><a href="/company/delete-company/?id=<%= company._id%>"><i class="fa-solid fa-trash-can"></i></a></li>
-                                        <li><a href="/company/companyinfo/?id=<%= company._id%>"><i class="fa-sharp fa-solid fa-plus"></i></i></a></li>
-                                        <li><a href="/company/companydetails/?id=<%= company._id%>"><i class="fa-regular fa-info"></i></a></li>
-                                    </ul>
-                                    </div>
-                                    <div class="part-2">
-                                        <h2 class="company-title"><%= company.name%></h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Single company -->
-                 <%}%>
-                        </div>
-                    </div>
-                </section>
+        <div class="w-75 mx-auto mt-5">
+            <br />
+        
+            <div class="row">
+                <div class="col-6">
+                    <h2>List of Companies</h2>
+                </div>
+        
+            </div>
+
+        <% if(company_list.length> 0) {%>
+            <div class="mt-3 mb-3">
+                <table class="table table-bordered table-striped">
+                    <thead class="thead-dark">
+                        <tr>
+                            <th scope="col">Company Name</th>
+                            <th scope="col">Schedule Interview</th>
+                            <th scope="col">Update Result</th>
+                            <th scope="col">Remove Company</th>
+                        </tr>
+                    </thead>
+        
+                    <tbody id="myTable">
+                        <% for(let company of company_list) {%>
+                            <tr>
+                                <td scope="row">
+                                    <%=company.name%>
+                                </td>
+                                <td scope="row">
+                                    <a href="/company/companyinfo/?id=<%= company._id%>"><i class="fa-regular fa-calendar"></i></a>
+                                </td>
+                                <td scope="row">
+                                    <a href="/company/companydetails/?id=<%= company._id%>"><i class="fa-solid fa-pencil"></i></a>
+                                </td>
+                                <td>
+                                    <a href="/company/delete-company/?id=<%= company._id%>"><i class="fa-solid fa-trash-can"></i></a>
+                                </td>
+                            </tr>
+                            <%}%>
+                    </tbody>
+                </table>
+            </div>
+            <%}else{%>
+                <div class="w-75 mx-auto mt-5">
+                    <h2>No Records Found</h2>
+                </div>
+                <%}%>
     </div>
 </body>
 
