--- a/views/home.ejs
+++ b/views/home.ejs
@@ -31,8 +31,8 @@
                                 <div id="product-1" class="single-product">
                                     <div class="part-1">
                                         <ul>
-                                        <li><a href="/delete-student/?id=<%= student._id%>"><i class="fa-solid fa-trash-can"></i></a></li>
-                                        <li><a href="/studentinfo"><i class="fa-solid fa-circle-info"></i></a></li>
+                                        <li><a href="/student/delete-student/?id=<%= student._id%>"><i class="fa-solid fa-trash-can"></i></a></li>
+                                        <li><a href="/student/studentinfo/?id=<%= student._id%>"><i class="fa-solid fa-circle-info"></i></a></li>
                                         </ul>
                                     </div>
                                     <div class="part-2">
