--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -10,4 +10,10 @@
     </div>
   
     <button type="submit" class="btn btn-primary">Sign In</button>
+    <a href="/users/auth/google">
+        Google Sign in /Sign Up
+    </a>
 </form>
+
+<p>
+</p>
